# Paralell-computing-of-Hausdorff-distance-measure-for-a-vector-wit-a-given-reference-point

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  diststanceVectoreGPU  kernel.cu  kernel.h  main.cpp
